--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <title>Outdoors</title>
   </head>
   <body>
-    <!-- <div class="navigation">
+    <div class="navigation">
       <input
         type="checkbox"
         class="navigation__checkbox"
@@ -275,7 +275,7 @@
             >Read all stories &rarr;</a
           >
       </div>
-    </section> -->
+    </section>
 
     <section class="section-form">
       <div class="section-form__container">
