--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             <label
               for="name"
               class="form__label"
-              >Full name</label
+              >E-mail</label
             >
           </div>
           <div class="form__radio-group">
