--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </h1>
         <a
           href="#popup"
-          class="btn btn-white btn-animated"
+          class="btn btn--white btn-animated"
           >Discover our tours</a
         >
       </div>
@@ -216,7 +216,7 @@
       class="tours"
       id="section-tours"
     >
-      <div class="u-center-text u-margin-bottom-big">
+      <div class="u-center-text u-margin-bottom-medium">
         <h2 class="heading-secoundary">Most popular tours</h2>
       </div>
       <div class="row">
@@ -224,14 +224,77 @@
           <div class="card">
             <div class="card__side card__side--front">
               <div class="card__picture card__picture--1">&nbsp;</div>
+              <div class="card__header"><span class="card__title card__title--1">the sea explorer</span></div>
+              <div class="card__front-text">
+                <ul class="card__list">
+                  <li class="card__item">3 day tour</li>
+                  <li class="card__item">Up to 30 people</li>
+                  <li class="card__item">2 tour guides</li>
+                  <li class="card__item">Sleep in cozy hotels</li>
+                  <li class="card__item">Difficulty: very easy</li>
+                </ul>
+              </div>
             </div>
             <div class="card__side card__side--back card__side--back-1">
-              Back
+              <div class="card__back-box">
+                <div class="card__only">only</div>
+                <div class="card__price">$378</div>
+                <a href="#popup" class="btn btn--white">Book now!</a>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-1-of-3">1 /3</div>
-        <div class="col-1-of-3">1 /3</div>
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--2">&nbsp;</div>
+              <div class="card__header"><span class="card__title card__title--2">the forest hiker</span></div>
+              <div class="card__front-text">
+                <ul class="card__list">
+                  <li class="card__item">7 day tour</li>
+                  <li class="card__item">Up to 40 people</li>
+                  <li class="card__item">6 tour guides</li>
+                  <li class="card__item">Sleep in provided tents</li>
+                  <li class="card__item">Difficulty: medium</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-2">
+              <div class="card__back-box">
+                <div class="card__only">only</div>
+                <div class="card__price">$431</div>
+                <a href="#popup" class="btn btn--white">Book now!</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--3">&nbsp;</div>
+              <div class="card__header"><span class="card__title card__title--3">the snow adventurer</span></div>
+              <div class="card__front-text">
+                <ul class="card__list">
+                  <li class="card__item">5 day tour</li>
+                  <li class="card__item">Up to 15 people</li>
+                  <li class="card__item">3 tour guides</li>
+                  <li class="card__item">Sleep in provided tents</li>
+                  <li class="card__item">Difficulty: hard</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-3">
+              <div class="card__back-box">
+                <div class="card__only">only</div>
+                <div class="card__price">$823</div>
+                <a href="#popup" class="btn btn--white">Book now!</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="u-center-text u-margin-top-big">
+        <a href="#popup" class="btn btn--green">discover all tours</a>
       </div>
     </section>
 
@@ -306,7 +369,7 @@
         </div>
       </div>
 
-      <div class="u-center-text u-margin-top-huge">
+      <div class="u-center-text u-margin-top-medium u-margin-bottom-medium">
         <a
           href="#"
           class="btn btn-text btn-animated"
@@ -353,10 +416,29 @@
             >
           </div>
           <div class="form__radio-group">
-            <input type="radio" class="form__radio-input" name="tour_group" id="tour_group_small" checked>
-            <label for="tour_group_small" class="form__radio-label"><span class="form__radio-button"></span>Small tour group</label>
-            <input type="radio" class="form__radio-input" name="tour_group" id="tour_group_large">
-            <label for="tour_group_large" class="form__radio-label"><span class="form__radio-button"></span>Large tour group</label>
+            <input
+              type="radio"
+              class="form__radio-input"
+              name="tour_group"
+              id="tour_group_small"
+              checked
+            />
+            <label
+              for="tour_group_small"
+              class="form__radio-label"
+              ><span class="form__radio-button"></span>Small tour group</label
+            >
+            <input
+              type="radio"
+              class="form__radio-input"
+              name="tour_group"
+              id="tour_group_large"
+            />
+            <label
+              for="tour_group_large"
+              class="form__radio-label"
+              ><span class="form__radio-button"></span>Large tour group</label
+            >
           </div>
           <button class="btn btn--green">next step &rarr;</button>
         </form>
